# zombi2

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  mkdocs.yml  pyproject.toml  weighting-transfers.md  zombi2-docs.html
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
analyses/: README.md
analyses/coupling_abc/: README.md  empirical_analysis.py  empirical_results.json  results.json  run_analysis.py
analyses/ecoli_nt/: report.tex  run_analysis.py  stats.json  stats.tex
analyses/performance/: README.md  benchmarks.py  config.py  plot.py
analyses/red/: REPORT.md  experiment.py  figures.py  observable.py  red.py  results.json
analyses/synteny_inversions/: REPORT.md  figures.py  fit.py  sim.py  stats.py
assets/: og-image.html
coupling_abc_analysis/: README.md  eggnog.py  empirical_analysis.py  empirical_results.json  run_analysis.py
coupling_abc_analysis/report/: report.tex
docs/: background.md  cli.md  coevolution_models.md  comparison.md  contributing.md  cookbook.md  coupling_explained.tex  coupling_model.md  examples.md  faq.md  ghost_lineages.md  index.md  installation.md  non_independence.tex  publishing.md  quickstart.md  references.bib  references.md  species_tree_models.md  validation.md
docs/contributing/: adding-a-model.md  conventions.md  model-lifecycle.md
docs/cookbook/: clock-heterogeneity.md  index.md  synteny.md
docs/design/: MAP.md  SPEC.md  build-plan.md  chromosome-network.md  coevolve-grammar.md  coupling-api.md  geneorder-export.md  genes-intergenes.md  genome-api.md  model-architecture.md  naming-consolidation.md  opportunity-knob.md  opportunity.md  rate-modifiers.md  rate-vocabulary.md  result-api.md  sequence-api.md  species-api.md  swenson-test-port.md  trait-api.md
docs/examples/: red-benchmark.md
docs/experimental/: incomplete-lineage-sorting.md  language-model-selection.md
docs/guide/: coevolution.md  coevolution_nulls.md  conditioning-and-joining.md  coupling.md  extending.md  gene-families.md  gene-trees-and-output.md  genomes-nucleotide.md  genomes-ordered.md  genomes.md  ghost-lineages.md  growth.md  introduction.md  matching.md  nucleotide-genomes.md  ordered-genomes.md  parallel.md  parameters-file.md  rate-variation.md  rates.md  rust-engine.md  rust-fast-path.md  sequences.md  species-trees.md  tour.md  trait-linked-genomes.md  traits.md  transfers.md
docs/javascripts/: mathjax.js
docs/models/: advanced-diversification.md  biogeography.md  birth-death.md  coevolution.md  continuous-traits.md  discrete-traits.md  diversification.md  dna-substitution.md  gene-family.md  genome-structure.md  nucleotide.md  ordered.md  protein-substitution.md  relaxed-clocks.md  sse.md
docs/reference/: api.md  output-files.md  rates-and-gillespie.md  tools.md
docs/tools/: geneorder-export.md  index.md  recon-accuracy.md  reconciliation-likelihood.md  reconciliation-parsing.md  red.md  treedist.md  undated-simulation.md
ecoli_nt_analysis/: report.tex  run_analysis.py  stats.json
examples/: README.md  episodic_species_trees.ipynb  genome_wise_model.ipynb  profile_matching.ipynb  profile_matching_experiment.py  profile_matching_scaling.py  zombi2_demo.ipynb
examples/parameters/: ecoli.toml
examples/red_benchmark/: .gitignore  README.md
figures/: STYLE.md
figures/gene_conversion/: complete.nwk
figures/gene_tree/: gene_tree.nwk
figures/gene_tree_panels/: complete.nwk  extant.nwk
figures/scripts/: colormaps.py  fig_age_crown.py  fig_clade_shift.py  fig_clads.py  fig_clock_cir.py  fig_clock_correlation.py  fig_clock_distributions.py  fig_clock_family.py  fig_coevolve_modes.py  fig_coevolve_modes4.py  fig_coevolve_null_timing.py  fig_coevolve_nulls.py  fig_dec.py  fig_dec_tree.py  fig_diversity_dependent.py  fig_gene_conditioned_trait.py  fig_gene_conversion.py  fig_gene_tree.py  fig_gene_tree_panels.py  fig_genome_circular.py  fig_genome_circular_bw.py  fig_genome_events.py  fig_gillespie_everywhere.py  fig_gillespie_loop.py  (+55 more)
hooks/: manual_callouts.py  manual_figures.py
legacy/: _params.py  _sampling.py
manual/: Makefile  README.md  REVISION_NOTES.md  callouts.lua  metadata.yaml  preamble-tools.tex  preamble.tex
performance_analysis/: README.md  benchmarks.py  plot.py  run.py
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: alelite.rs  lib.rs
scripts/: release.sh
tests/: test_alelite.py  test_api_namespaces.py  test_bed_output.py  test_biogeography.py  test_branch_events.py  test_branch_rates.py  test_chromosome_events.py  test_chromosome_fingerprints.py  test_chromosome_output.py  test_cladogenetic_genome.py  test_cli.py  test_cli_contract.py  test_cli_determinism.py  test_cli_experimental.py  test_clocks.py  test_co_diversification.py  test_codon_models.py  test_codon_selection.py  test_coevolve_grammar.py  test_coevolve_nulls.py  test_coevolve_rate_bridge.py  test_coevolve_sequence_bridge.py  test_coevolve_species_bridge.py  test_coevolve_trait_bridge.py  test_correlated_binary_k.py  test_coupling.py  test_coupling_conditioned.py  test_coupling_joint.py  test_coupling_joint_genome.py  test_deprecated_aliases.py  test_episodic.py  test_event_trace.py  test_experimental.py  test_extensibility.py  test_family_modifier.py  test_family_substitution_speed.py  test_fast.py  test_gene_conditioned_trait.py  test_gene_conversion.py  test_gene_diversification.py  (+77 more)
tools/: README.md  build_docs_html.py  sync_wiki.py
web/: index.html
zombi2/: __init__.py  __main__.py  _aa_models.py  _parallel.py  _rust.py  _sampling.py  _traits_impl.py  abc.py  biogeography.py  cladogenetic_genome.py  cli.py  clocks.py  coevolve.py  coupling.py  distributions.py  events.py  fast.py  gene_conditioned_trait.py  gene_diversification.py  genome.py  genome_sim.py  genomes.py  genomes_unordered.py  ghosts.py  matching.py  modifiers.py  nucleotide_genome.py  nucleotide_sim.py  parallel.py  profiles.py  progress.py  rate.py  rate_variation.py  rates.py  reconciliation.py  scope.py  sequence_evolution.py  sequence_sim.py  sequences.py  simulation.py  (+10 more)
(+366 files in other folders)
