[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zombi2"
# Single-sourced from zombi2/__init__.py (__version__) via [tool.hatch.version].
dynamic = ["version"]
description = "A phylogenetic simulator of species trees and gene families"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Adrián A. Davin" }]
keywords = ["phylogenetics", "simulation", "gene families", "birth-death", "evolution"]
# zombi2_core is the compiled Rust engine for the built-in gene-family model.
# It ships as prebuilt binary wheels and is released in lockstep with zombi2,
# so the version is pinned exactly -- bump this pin to match rust/Cargo.toml on
# each release. For local development, install it first (`pip install ./rust`)
# before an editable install of zombi2.
dependencies = ["numpy>=1.24", "zombi2_core==0.2.0"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AADavin/zombi2"
Documentation = "https://aadavin.github.io/zombi2/"
Repository = "https://github.com/AADavin/zombi2"
Issues = "https://github.com/AADavin/zombi2/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "scipy>=1.10"]
docs = ["mkdocs-material", "mkdocstrings[python]"]
# Experimental protein-language-model-guided selection (zombi2.experimental.selection +
# .codon_selection). Heavy, optional, all lazily imported: the default `pip install zombi2`
# stays torch-free. scipy powers the robust codon matrix exponential (codon selection).
selection = ["torch", "fair-esm", "scipy>=1.10"]

[project.scripts]
zombi2 = "zombi2.cli:main"

[tool.hatch.version]
path = "zombi2/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["zombi2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Ruff's default rule set (pyflakes + core pycodestyle), pinned, minus a few that flag
# deliberate, readable patterns in the numerical code.
select = ["E4", "E7", "E9", "F"]
ignore = [
    "E741",  # ambiguous names like `l` / `O` — conventional in the rate-matrix / math code
    "E702",  # multiple statements on one line (;) — tight COO sparse-assembly loops
    "E731",  # lambda assignment — occasional and deliberate
]
