[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zombi2"
# Single-sourced from zombi2/__init__.py (__version__) via [tool.hatch.version].
dynamic = ["version"]
description = "Simulating the evolution of species trees, genomes, sequences and traits"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Adrián A. Davin" }]
keywords = ["phylogenetics", "simulation", "gene families", "birth-death", "evolution"]
# The clean core is pure Python (numpy only). The compiled Rust engine (zombi2_core) and the
# TOML params reader belong to quarantined code (legacy/); they return, pinned, when the Rust
# stage and the params feature are rebuilt on the clean core. See docs/design/MAP.md.
dependencies = [
    "numpy>=1.24",
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AADavin/zombi2"
Documentation = "https://aadavin.github.io/zombi2/"
Repository = "https://github.com/AADavin/zombi2"
Issues = "https://github.com/AADavin/zombi2/issues"

[project.optional-dependencies]
# ruff is pinned to a minor series: its rule set (and its autofixes) evolve between releases, and
# [tool.ruff.lint] below deliberately pins *which* rules we run — an unpinned linter would let a
# ruff release turn CI red without a change on our side. Bump it deliberately.
dev = ["pytest>=7", "pytest-cov", "scipy>=1.10", "ruff>=0.12,<0.13"]
docs = ["mkdocs-material", "mkdocstrings[python]"]
# Parsers for external reconciliation-tool output (zombi2.tools.reconparser: ALE, AleRax).
# Trees are parsed with ZOMBI2's own zombi2.tree.read_newick (no ete3), so the only extra
# dependency is pandas for the table outputs; it stays out of the base install.
reconparser = ["pandas>=2.0.0"]
# Snakemake benchmarking workflows (examples/). snakemake pulls pyyaml transitively, but the
# Snakefile imports it directly, so pin it; matplotlib renders the summary figures; the SLURM
# executor plugin is only needed to run on a cluster.
bench = ["snakemake>=8", "snakemake-executor-plugin-slurm", "matplotlib", "pyyaml"]

# The `zombi2` CLI is grown from the clean core (see docs/design/MAP.md), one level at a time. It
# currently exposes the two built levels — `zombi2 species` and `zombi2 genomes`; the rest land as
# their levels are rebuilt (the old commands stay quarantined in legacy/ until then).
[project.scripts]
zombi2 = "zombi2.cli.main:main"

[tool.hatch.version]
path = "zombi2/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["zombi2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
# legacy/ is the quarantined old codebase (read-only reference, not importable); it is full of
# the old lexicon and dangling imports on purpose. Never lint it.
extend-exclude = ["legacy"]

[tool.ruff.lint]
# Ruff's default rule set (pyflakes + core pycodestyle), pinned, minus a few that flag
# deliberate, readable patterns in the numerical code.
select = ["E4", "E7", "E9", "F"]
ignore = [
    "E741",  # ambiguous names like `l` / `O` — conventional in the rate-matrix / math code
    "E702",  # multiple statements on one line (;) — tight COO sparse-assembly loops
    "E731",  # lambda assignment — occasional and deliberate
]

[tool.ruff.lint.per-file-ignores]
# The reconparser parsers are vendored from https://github.com/AADavin/reconparser and kept
# close to upstream to make future syncs trivial; exempt their upstream idioms from our lint.
"zombi2/tools/reconparser/parsers/*.py" = [
    "F401",  # typing.Tuple imported but unused
    "F841",  # a bookkeeping local (num_trees) assigned but unused
]
# The figure scripts share one house-style vocabulary import (`from zombi_style import FONT, INK,
# MUTED, FS_TITLE, FS_LABEL, FS_ANNOT, FS_TICK` — 44 scripts, 19 of them the identical line). Every
# script imports the whole vocabulary whether or not it uses every name, so the set stays uniform
# and a figure can start using one without touching its imports. Pruning per-script would make the
# family inconsistent for no gain.
"figures/scripts/*.py" = ["F401"]
# The test suite organises long files into sections under banner comments, with each section's
# imports at its head rather than hoisted to the top of the file. That keeps a section readable as
# a unit; imports-at-top is the only thing E402 is about, and nothing here depends on import order.
"tests/*.py" = ["E402"]
