[package]
name = "zombi2_core"
version = "0.2.0"
edition = "2021"

[lib]
name = "zombi2_core"
crate-type = ["cdylib"]

[dependencies]
# abi3-py310: build a single stable-ABI wheel per platform that works on
# CPython 3.10+ (and forward, without recompiling), instead of one wheel per
# minor version. Keeps the release wheel matrix to one build per platform.
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py310"] }
rayon = "1"

[profile.release]
opt-level = 3
lto = true
