[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "zombi2_core"
# Single-sourced from Cargo.toml ([package].version); maturin reads it there.
dynamic = ["version"]
description = "Compiled Rust engine for ZOMBI2's built-in gene-family model"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Adrián A. Davin" }]
keywords = ["phylogenetics", "simulation", "gene families", "birth-death", "evolution"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/AADavin/zombi2"
Repository = "https://github.com/AADavin/zombi2"

[tool.maturin]
# The crate builds one stable-ABI (abi3) wheel per platform, usable on
# CPython 3.10+ -- see the pyo3 `abi3-py310` feature in Cargo.toml.
module-name = "zombi2_core"
